--- a/app/design/frontend/Earthlite/base/Magento_Customer/web/css/source/_dashboard.less
+++ b/app/design/frontend/Earthlite/base/Magento_Customer/web/css/source/_dashboard.less
@@ -18,7 +18,7 @@
                 .lib-button-primary();
             }
         }
-        
+
         .actions,
         .secondary {
             a.action {
@@ -113,7 +113,7 @@
             }
         }
     }
-    
+
     .block-collapsible-nav {
         &-content {
             background: @color-white;
@@ -204,6 +204,7 @@
                     border: 1px solid @color-lines;
                     border-top: 4px solid @theme__color__primary;
                     color: @theme__color__secondary;
+                    margin-bottom: 0 !important;
 
                     .action {
                         float: right;
@@ -233,14 +234,14 @@
                         }
                     }
                 }
-                
+
                 &.block-dashboard-orders {
                     .block-content {
                         padding: 0;
                         border: none;
                     }
                 }
-    
+
             }
         }
 
@@ -344,9 +345,9 @@
                         border: none;
                     }
                 }
-           }
+            }
 
-           .product-item-info {
+            .product-item-info {
                 width: 100%;
             }
 
@@ -354,7 +355,7 @@
                 height: auto;
             }
 
-            
+
             .box-tocart {
                 .fieldset {
                     margin-bottom: 0;
@@ -493,6 +494,11 @@
 //  _____________________________________________
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
+    .account .column .block {
+        .block-title, .block-content {
+            padding: 10px 15px;
+        }
+    }
     .wishlist-index-index  {
         .products-grid.wishlist {
             .product-item {
@@ -518,7 +524,7 @@
                     }
                 }
             }
-            
+
         }
     }
 
@@ -572,13 +578,15 @@
 
         .table-wrapper {
             tr {
+                border-bottom: 1px solid @color-lines;
+                padding: 10px 5px;
                 td[data-th] {
                     &:before {
                         width: 50%;
                     }
                 }
                 td {
-                    padding: 8px !important;
+                    padding: 2px 10px !important;
                 }
             }
 
@@ -622,7 +630,7 @@
             display: none;
         }
     }
-    
+
 }
 
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @c-tab) { 
